# NostraBuild

./: .travis.yml  CMakeLists.txt  README.md
cmake/: CPackConfig.cmake.in  Doxyfile.in  NostraCMakeConfig.cmake  export.h.in  welcome.txt
cmake/cmake/: CPackConfig.cmake.in  Targets.cmake.in
cmake/in/: CMakeLists.txt.in  LICENSE.in  README.md.in
cmake/in/cmake/: CPackConfig.cmake.in  config.h.in  welcome.txt.in
cmake/root/: CMakeLists.txt
src/: CreateProject.cmake  Nostra.cmake
src/nostra/: CreateProject.cmake  Documentation.cmake  Examples.cmake  ExportHeader.cmake  Nostra.cmake  PrivateHelpers.cmake  Testing.cmake  Utility.cmake  nostra.sh
test/: TestRunner.cmake
test/general_function_tests_fail.1/: CMakeLists.txt
test/general_function_tests_fail.2/: CMakeLists.txt
test/general_function_tests_fail.3/: CMakeLists.txt
test/general_function_tests_fail.4/: CMakeLists.txt
test/general_function_tests_fail.5/: CMakeLists.txt
test/general_function_tests_nofail/: CMakeLists.txt  source.c
test/nostra_add_c_test/CTestProject/: CMakeLists.txt
test/nostra_add_c_test/CTestProject/src/: component.c
test/nostra_add_c_test/CTestProject/test/ntp.c.component.wt.d/src/: component.wt.c  source.c
test/nostra_add_c_test/CTestProject/test/ntp.c.ex.s.component.1.wt.d/src/: test.c
test/nostra_add_c_test/CTestProject/test/ntp.c.ex.s.component.wt.2.d/src/: test.c
test/nostra_add_compile_test/CompileTestProject/: CMakeLists.txt
test/nostra_add_compile_test/CompileTestProject/include/nostra/testproject/: component.h
test/nostra_add_compile_test/CompileTestProject/test/nctp.c.bu.f.component.wt.d/src/: component.wt.c
test/nostra_add_compile_test/CompileTestProject/test/nctp.c.bu.s.component.wt.1.d/src/: test.c
test/nostra_add_compile_test/CompileTestProject/test/nctp.cpp.bu.f.component.wt.d/src/: component.wt.cpp  source.cpp  test.cpp
test/nostra_add_compile_test/CompileTestProject/test/nctp.cpp.bu.s.component.wt.1.d/src/: test.cpp
test/nostra_add_cpp_test/CppTestProject/: CMakeLists.txt
test/nostra_add_cpp_test/CppTestProject/include/nostra/testproject/: component.hpp
test/nostra_add_cpp_test/CppTestProject/src/: component.cpp
test/nostra_add_cpp_test/CppTestProject/test/ntp.cpp.component.1.wt.d/src/: component.1.wt.cpp
test/nostra_add_cpp_test/CppTestProject/test/ntp.cpp.component.wt.d/src/: component.wt.cpp
test/nostra_add_cpp_test/CppTestProject/test/ntp.cpp.ex.s.component.wt.1.d/src/: source.cpp
test/nostra_list_functions/: _nostra_check_no_parameters.cmake  _nostra_check_parameter.cmake  nostra_prefix_list.cmake  nostra_suffix_list.cmake
